# torchTT

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conf.py  index.rst  pyproject.toml  pyproject_toml  requirements.txt  setup.py  test.py  test_amen_mult.py  testing_CPP.py  testing_cpp.py
cpp/: BLAS.h  amen_divide.h  amen_solve.h  compression.h  cpp_ext.cpp  define.h  dmrg_mv.h  full.h  gmres.h  matvecs.h  ortho.h  setup.py  test_gmres.cpp
docs/: examples.rst  index_page.rst  install.rst  intro_page.rst  modules.rst  package-overview.rst  torchtt.rst  tutorial.rst
examples/: automatic_differentiation.ipynb  automatic_differentiation.py  basic_linalg.ipynb  basic_linalg.py  basic_nn.ipynb  basic_nn.py  basic_tutorial.ipynb  basic_tutorial.py  basis.ipynb  basis.py  bayesian_inversion.ipynb  bayesian_inversion.py  compressed_layer.ipynb  cross_interpolation.ipynb  cross_interpolation.py  cuda.ipynb  cuda.py  deep_tt_density.ipynb  deep_tt_density.py  efficient_linalg.ipynb  efficient_linalg.py  fast_tt_operations.ipynb  gpu_acceleration.ipynb  gpu_acceleration.py  manifold.ipynb  manifold.py  mnist_nn.ipynb  mnist_nn.py  random.py  random_tt.py  system_solvers.ipynb  system_solvers.py  system_solvers_V2.py  tensor_completion.py  tutorial_part1.ipynb
paper/: paper.bib  paper.md
tests/: test_ad.py  test_algebra_2.py  test_basis.py  test_cross.py  test_decomposition.py  test_fast_products.py  test_gaussian_basis.py  test_linalg.py  test_solvers.py  test_utils.py
torchtt/: INTRO.md  __init__.py  _amen.py  _amen_approx.py  _aux_ops.py  _custom_timer.py  _decomposition.py  _division.py  _dmrg.py  _extras.py  _fast_mult.py  _iterative_solvers.py  _torchtt.py  _tt_base.py  aux_ops.py  cpp.py  decomposition.py  division.py  dmrg.py  errors.py  finitediff.py  grad.py  nn.py  (+5 more)
(+32 files in other folders)
