[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0", "wheel", "torch>=1.7", "numpy>=1.18", "opt_einsum", "ninja", "scipy>=0.16"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["torchtt"]

#[tool.setuptools.package-data]
#torchtt = ["cpp/*"]

[project]
name = "torchTT"
version = "0.3"
description = "Tensor-Train decomposition in pytorch."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.7", 
    "numpy>=1.18", 
    "opt_einsum", 
    "scipy>=0.16",
    "ninja"
]
license = {file = "LICENSE"}
authors = [
    { name = "Ion Gabriel Ion", email = "ion.ion.gabriel@gmail.com" }
]
keywords = ["pytorch", "tensor-train decomposition"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "sphinx",
    "sphinx_rtd_theme",
    "ipykernel",
    "matplotlib",
    "nbsphinx",
    "torchvision",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]